--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="description" content="tailus ui html-vite and tailwindcss 3.1 boilerplate" />
     <title>Zé Planilha - Planilha Fluxo de Caixa</title>
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&amp;display=swap"
-        rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&family=Poppins:wght@200;300;400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 
 <body class="min-h-screen bg-white selection:bg-primary/10 selection:text-primary">
-    <header>
+    <header class="font-manrope">
         <nav id="navbar"
             class="fixed inset-x-0 z-20 w-full border-b border-gray-100 bg-white/80 backdrop-blur">
             <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0">
