--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
                                         <span class="relative flex items-center text-sm font-semibold text-black lg:text-black">
                                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 mr-2">
                                                 <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
-                                              </svg>
-                                              
+                                            </svg>                                              
                                             Comprar Planilha
                                         </span>
                                     </a>
@@ -121,15 +120,23 @@
                         <div class="mt-12 -ml-1 flex w-full flex-1 flex-col space-y-2 sm:flex-row md:w-max lg:mt-0 lg:mr-6 lg:space-y-0 lg:pl-6">
                             <a href="https://seguro.zeplanilha.com/r/ABE0WSGLNP"
                                 class="relative ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-green-300 before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-green-400 lg:before:bg-green-300">
-                                <span class="relative text-sm font-semibold text-black lg:text-black">Comprar
-                                    Planilha</span>
+                                <span class="relative flex items-center text-sm font-semibold text-black lg:text-black">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 mr-2">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                    </svg>
+                                    Comprar Planilha
+                                </span>
                             </a>
                         </div>
                         <div class="mt-12 -ml-1 flex w-full flex-1 flex-col space-y-2 border-primary/10 sm:flex-row md:w-max lg:mt-0 lg:mr-6 lg:space-y-0 lg:pl-6">
                             <a href="https://zeplanilha.com/fluxodecaixa/"
                                 class="relative ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-gray-200 before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-gray-300 lg:before:bg-gray-200">
-                                <span class="relative text-sm font-semibold text-black lg:text-black">Planilha
-                                    DEMO</span>
+                                <span class="relative flex items-center text-sm font-semibold text-black lg:text-black">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 mr-2">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 13.5l3 3m0 0l3-3m-3 3v-6m1.06-4.19l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z" />
+                                      </svg>
+                                    Planilha DEMO
+                                </span>
                             </a>
                         </div>
                     </div>
