--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </header>
 
     <div id="authentication-modal" tabindex="-1" aria-hidden="true"
-        class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-modal md:h-full bg-gray-300">
+        class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-modal md:h-full bg-opacity-50">
         <div class="relative w-full h-full max-w-md md:h-auto">
             <div class="relative w-[150%] ml-[-25%] bg-white rounded-lg shadow p-4">
                 <button type="button"
@@ -208,17 +208,19 @@
                         </div>
                         <div
                             class="mt-12 -ml-1 flex w-full flex-1 flex-col space-y-2 border-primary/10 sm:flex-row md:w-max lg:mt-0 lg:mr-6 lg:space-y-0 lg:pl-6">
-                            <a href="https://zeplanilha.com/fluxodecaixa/"
-                                class="relative ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-gray-200 before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-gray-300 lg:before:bg-gray-200">
-                                <span class="relative flex items-center text-sm font-semibold text-black lg:text-black">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke-width="1.5" stroke="currentColor" class="w-5 h-5 mr-2">
-                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                            d="M9 13.5l3 3m0 0l3-3m-3 3v-6m1.06-4.19l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z" />
-                                    </svg>
-                                    Planilha DEMO
-                                </span>
-                            </a>
+                            <button data-modal-target="authentication-modal"
+                                        data-modal-toggle="authentication-modal" type="button"
+                                        class="relative ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-gray-200 before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-gray-300 lg:before:bg-gray-200">
+                                        <span
+                                            class="relative flex items-center text-sm font-semibold text-black lg:text-black">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                                stroke-width="1.5" stroke="currentColor" class="w-5 h-5 mr-2">
+                                                <path stroke-linecap="round" stroke-linejoin="round"
+                                                    d="M9 13.5l3 3m0 0l3-3m-3 3v-6m1.06-4.19l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z" />
+                                            </svg>
+                                            Planilha DEMO
+                                        </span>
+                                    </button>
                         </div>
                     </div>
                 </div>
