--- a/index.html
+++ b/index.html
@@ -430,12 +430,12 @@
     </section>
 
     <section class="border-y-4 border-green-500">
-        <div class="flex px-10 justify-between font-poppins items-center mt-16">
+        <div class="flex sm:flex-col sm:justify-center sm:items-center px-10 justify-between font-poppins items-center mt-16">
             <div>
-                <p class="font-semibold text-4xl text-gray-900">Mais de 8 anos desenvolvendo soluções em excel</p>
+                <p class="font-semibold text-4xl sm:text-xl text-gray-900">Mais de 8 anos desenvolvendo soluções em excel</p>
             </div>
             <div class="flex flex-col">
-                <span class="font-semibold text-7xl text-green-500">1200+</span>
+                <span class="font-semibold text-7xl sm:text:3xl text-green-500">1200+</span>
                 <span class="text-md font-semibold text-gray-700 text-center">Clientes atendidos</span>
             </div>
         </div>
