--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             class="bg-gradient-to-r from-green-300 to-green-500 bg-clip-text text-transparent">organizado
                             e automatizado</span> no excel!</h2>
                     <div class="bg-white rounded-2xl shadow-xl py-2 mt-0 mb-5 flex justify-center">
-                        <p class="mr-4 text-gray-600 font-semibold">5 estrelas na avaliação do Google!</p>
+                        <p class="mr-4 text-gray-600 font-semibold sm:px-2 sm:text-xs">5 estrelas na avaliação do Google!</p>
                         <span class="mx-1"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                 stroke-width="1.5" stroke="none" class="w-6 h-6 fill-orange-600">
                                 <path stroke-linecap="round" stroke-linejoin="round"
