Change screen config in third section

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
     </section>
 
     <section class="border-y-4 border-green-500">
-        <div class="flex sm:flex-col sm:justify-center sm:items-center px-10 justify-between font-poppins items-center mt-16">
+        <div class="flex md:flex-col md:justify-center md:items-center px-10 justify-between font-poppins items-center mt-16">
             <div>
                 <p class="font-semibold text-4xl sm:text-xl text-gray-900">Mais de 8 anos desenvolvendo soluções em excel</p>
             </div>
