--- a/index.html
+++ b/index.html
@@ -865,6 +865,152 @@
         </div>
     </section>
 
+    <section class="my-20">
+        <div class="mx-auto px-4 sm:px-12 xl:max-w-5xl xl:px-0 font-poppins">
+            <h2 class="mb-12 text-center text-3xl font-bold text-gray-800 md:text-4xl">Perguntas Frequentes</h2>
+
+            <div class="divide-y divide-gray-200 border-y border-gray-200">
+                <div>
+                    <dl class="faq mx-auto max-w-3xl">
+                        <dt class="text-base">
+                            <button type="button" class="flex w-full items-start justify-between py-6 text-left text-gray-400" aria-controls="faq-0" data-active="false">
+                                <span class="font-medium text-gray-800">Após comprar a planilha, em quanto tempo recebo minha planilha por e-mail?</span>
+                                <span class="ml-6 flex h-7 items-center">
+                                    <svg class="arrow-down h-6 w-6 rotate-0 transform duration-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                                    </svg>
+                                </span>
+                            </button>
+                        </dt>
+                        <dd class="faq-answer block max-h-0 overflow-hidden pr-12 duration-300 ease-in-out" id="faq-0">
+                            <p class="pb-6 text-base text-gray-600">Em 5 minutos! Nosso processo é 100% automatizado. Assim que sua compra é aprovada, nosso sistema dispara o email com a planilha em anexo.</p>
+                        </dd>
+                    </dl>
+                </div>
+                <div>
+                    <dl class="faq mx-auto max-w-3xl">
+                        <dt class="text-base">
+                            <button type="button" class="flex w-full items-start justify-between py-6 text-left text-gray-400" aria-controls="faq-1" data-active="false">
+                                <span class="font-medium text-gray-800">Após comprar a planilha, posso aterar fórmulas/cores/logotipos?</span>
+                                <span class="ml-6 flex h-7 items-center">
+                                    <svg class="arrow-down h-6 w-6 rotate-0 transform duration-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                                    </svg>
+                                </span>
+                            </button>
+                        </dt>
+                        <dd class="faq-answer block max-h-0 overflow-hidden pr-12 duration-300 ease-in-out" id="faq-1">
+                            <p class="pb-6 text-base text-gray-600">Sim, você poderá alterar o que quiser. A planilha que será enviada para você está <b>totalmente desbloqueada</b>.</p>
+                        </dd>
+                    </dl>
+                </div>
+                <div>
+                    <dl class="faq mx-auto max-w-3xl">
+                        <dt class="text-base">
+                            <button type="button" class="flex w-full items-start justify-between py-6 text-left text-gray-400" aria-controls="faq-2" data-active="false">
+                                <span class="font-medium text-gray-800">Esse valor da planilha é uma mensalidade ou pagamento único?</span>
+                                <span class="ml-6 flex h-7 items-center">
+                                    <svg class="arrow-down h-6 w-6 rotate-0 transform duration-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                                    </svg>
+                                </span>
+                            </button>
+                        </dt>
+                        <dd class="faq-answer block max-h-0 overflow-hidden pr-12 duration-300 ease-in-out" id="faq-2">
+                            <p class="pb-6 text-base text-gray-600">Esse valor é único, pagando apenas na compra. Não há mensalidades!</p>
+                        </dd>
+                    </dl>
+                </div>
+                <div>
+                    <dl class="faq mx-auto max-w-3xl">
+                        <dt class="text-base">
+                            <button type="button" class="flex w-full items-start justify-between py-6 text-left text-gray-400" aria-controls="faq-3" data-active="false">
+                                <span class="font-medium text-gray-800">Qual versão de Excel preciso ter? Funciona no Exce online?</span>
+                                <span class="ml-6 flex h-7 items-center">
+                                    <svg class="arrow-down h-6 w-6 rotate-0 transform duration-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                                    </svg>
+                                </span>
+                            </button>
+                        </dt>
+                        <dd class="faq-answer block max-h-0 overflow-hidden pr-12 duration-300 ease-in-out" id="faq-3">
+                            <p class="pb-6 text-base text-gray-600">Você precisa da versão Office 2010 ou superior. Caso você não sabia a versão do seu excel, <a href="https://www.youtube.com/watch?v=ALTwrBakIQI">veja esse vídeo</a>.</p>
+                        </dd>
+                    </dl>
+                </div>
+                <div>
+                    <dl class="faq mx-auto max-w-3xl">
+                        <dt class="text-base">
+                            <button type="button" class="flex w-full items-start justify-between py-6 text-left text-gray-400" aria-controls="faq-4" data-active="false">
+                                <span class="font-medium text-gray-800">Após a compra, vou ter suporte?</span>
+                                <span class="ml-6 flex h-7 items-center">
+                                    <svg class="arrow-down h-6 w-6 rotate-0 transform duration-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                                    </svg>
+                                </span>
+                            </button>
+                        </dt>
+                        <dd class="faq-answer block max-h-0 overflow-hidden pr-12 duration-300 ease-in-out" id="faq-4">
+                            <p class="pb-6 text-base text-gray-600">Sim, damos suporte por email até 45 dias após a compra. Temos também uma seção com muitos vídeos criados a partir de dúvidas de clientes. A partir dos 45 dias, você deverá nos consultar valores de consultoria.</p>
+                            <p class="pb-6 text-base text-gray-600"><strong>Não damos suporte apenas nos casos de customização, que é quando o cliente quer alterar fórmulas, criar novos gráficos, fazer um novo controle, etc. </strong></p>
+                        </dd>
+                    </dl>
+                </div>
+                <div>
+                    <dl class="faq mx-auto max-w-3xl">
+                        <dt class="text-base">
+                            <button type="button" class="flex w-full items-start justify-between py-6 text-left text-gray-400" aria-controls="faq-5" data-active="false">
+                                <span class="font-medium text-gray-800">Já preenchi os dados na versão de demonstração. Ao comprar a versão paga (completa), vou preencher novamente em outra planilha?</span>
+                                <span class="ml-6 flex h-7 items-center">
+                                    <svg class="arrow-down h-6 w-6 rotate-0 transform duration-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                                    </svg>
+                                </span>
+                            </button>
+                        </dt>
+                        <dd class="faq-answer block max-h-0 overflow-hidden pr-12 duration-300 ease-in-out" id="faq-5">
+                            <p class="pb-6 text-base text-gray-600">Sim, você receberá uma planilha nova. Porém você irá apenas copiar e colar os valores de uma planilha para a outra. É muito rápido. </p>
+                        </dd>
+                    </dl>
+                </div>
+                <div>
+                    <dl class="faq mx-auto max-w-3xl">
+                        <dt class="text-base">
+                            <button type="button" class="flex w-full items-start justify-between py-6 text-left text-gray-400" aria-controls="faq-6" data-active="false">
+                                <span class="font-medium text-gray-800">Posso incluir os lançamentos (entrada e saída) fora da ordem cronológica?</span>
+                                <span class="ml-6 flex h-7 items-center">
+                                    <svg class="arrow-down h-6 w-6 rotate-0 transform duration-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                                    </svg>
+                                </span>
+                            </button>
+                        </dt>
+                        <dd class="faq-answer block max-h-0 overflow-hidden pr-12 duration-300 ease-in-out" id="faq-6">
+                            <p class="pb-6 text-base text-gray-600">Sim, nossa planilha está preparada para isso e irá organizar tudo nos dashboards.</p>
+                        </dd>
+                    </dl>
+                </div>
+                <div>
+                    <dl class="faq mx-auto max-w-3xl">
+                        <dt class="text-base">
+                            <button type="button" class="flex w-full items-start justify-between py-6 text-left text-gray-400" aria-controls="faq-7" data-active="false">
+                                <span class="font-medium text-gray-800">Preciso ter uma planilha para cada ano?</span>
+                                <span class="ml-6 flex h-7 items-center">
+                                    <svg class="arrow-down h-6 w-6 rotate-0 transform duration-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                                    </svg>
+                                </span>
+                            </button>
+                        </dt>
+                        <dd class="faq-answer block max-h-0 overflow-hidden pr-12 duration-300 ease-in-out" id="faq-7">
+                            <p class="pb-6 text-base text-gray-600">Não, nossa planilha suporta dados de 2020 a 2030.</p>
+                        </dd>
+                    </dl>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
     <script type="module" src="./app.js"></script>
 </body>
