Change background color of the landing page and change background color of the buy button

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <li
                                     class="mt-12 -ml-1 flex w-full flex-col space-y-2 sm:flex-row md:w-max lg:mt-0 lg:mr-6 lg:space-y-0 lg:pl-6">
                                     <a href="https://seguro.zeplanilha.com/r/ABE0WSGLNP"
-                                        class="relative ml-auto flex h-9 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-green-300 before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-green-400 lg:before:bg-green-300">
+                                        class="relative ml-auto flex h-9 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-[#4ed199] before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-[#4ed199]/90 lg:before:bg-[#4ed199]">
                                         <span
                                             class="relative flex items-center text-sm font-semibold text-black lg:text-black">
                                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -200,7 +200,7 @@
                         <div
                             class="mt-12 -ml-1 flex w-full flex-1 flex-col space-y-2 sm:flex-row md:w-max lg:mt-0 lg:mr-6 lg:space-y-0 lg:pl-6">
                             <a href="https://seguro.zeplanilha.com/r/ABE0WSGLNP"
-                                class="relative ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-green-300 before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-green-400 lg:before:bg-green-300">
+                                class="relative ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-[#4ed199] before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-[#4ed199]/90 lg:before:bg-[#4ed199] shadow-xl">
                                 <span class="relative flex items-center text-sm font-semibold text-black lg:text-black">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor" class="w-5 h-5 mr-2">
@@ -215,7 +215,7 @@
                             class="mt-12 -ml-1 flex w-full flex-1 flex-col space-y-2 border-primary/10 sm:flex-row md:w-max lg:mt-0 lg:mr-6 lg:space-y-0 lg:pl-6">
                             <button data-modal-target="authentication-modal" data-modal-toggle="authentication-modal"
                                 type="button"
-                                class="relative ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-gray-200 before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-gray-300 lg:before:bg-gray-200">
+                                class="relative ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-gray-200 before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-gray-300 lg:before:bg-gray-200 shadow-xl">
                                 <span class="relative flex items-center text-sm font-semibold text-black lg:text-black">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor" class="w-5 h-5 mr-2">
@@ -250,7 +250,7 @@
             </svg>
     </section>
 
-    <section class="relative py-32 bg-gray-100">
+    <section class="relative py-32">
         <div aria-hidden="true" class="absolute inset-0 top-60 grid grid-cols-2 -space-x-52 opacity-50">
             <div class="h-60 bg-gradient-to-br from-primary to-purple-400 blur-[106px]"></div>
             <div class="h-40 bg-gradient-to-r from-cyan-400 to-sky-300 blur-[106px]"></div>
@@ -433,7 +433,7 @@
         </div>
     </section>
 
-    <section class="border-y-4 border-green-500">
+    <section class="">
         <div
             class="flex sm:flex-col sm:justify-center sm:items-center lg:flex-row px-10 lg:justify-between font-poppins items-center mt-16">
             <div>
@@ -510,7 +510,7 @@
         </div>
     </section>
 
-    <section class="py-20 bg-gray-200">
+    <section class="py-20">
         <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0">
             <div class="space-y-6 md:flex lg:items-center lg:gap-6 lg:space-y-0">
                 <div class="md:4/12 lg:w-5/12">
@@ -530,7 +530,7 @@
         </div>
     </section>
 
-    <section class="py-20 bg-gray-200">
+    <section class="py-20">
         <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0">
             <div class="space-y-6 md:flex lg:items-center lg:gap-6 lg:space-y-0">
                 <div class=" flex justify-start md:9/12 lg:w-8/12">
@@ -548,7 +548,7 @@
         </div>
     </section>
 
-    <section class="bg-gray-200 py-20">
+    <section class="py-20">
         <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0">
             <div class="mt-12 grid gap-8 md:grid-cols-2 font-poppins">
                 <div
@@ -657,7 +657,7 @@
         </div>
     </section>
 
-    <section class="py-20 bg-gray-200">
+    <section class="py-20">
         <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0">
             <div class="space-y-6 md:flex lg:items-center lg:gap-6 lg:space-y-0">
                 <div class="md:4/12 lg:w-4/12">
@@ -694,7 +694,7 @@
         </div>
     </section>
 
-    <section class="py-20 bg-gray-200">
+    <section class="py-20">
         <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0">
             <div class="space-y-6 md:flex lg:items-center lg:gap-6 lg:space-y-0">
                 <div class="md:4/12 lg:w-4/12">
@@ -817,7 +817,7 @@
         </div>
     </section>
 
-    <section class="bg-gradient-to-b from-gray-100 to-transparent pt-20 my-20">
+    <section class="bg-gradient-to-b from-gray-50 to-transparent pt-20 my-20">
         <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0 font-poppins">
             <h2 class="text-center text-3xl font-medium text-gray-800 md:text-4xl xl:text-5xl">Conheça os <b>autores</b>
                 da planilha</h2>
