Update function and change the font of the modal

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </header>
 
     <div id="authentication-modal" tabindex="-1" aria-hidden="true"
-        class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-modal md:h-full bg-opacity-50">
+        class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-modal md:h-full bg-opacity-50 font-poppins">
         <div class="relative w-full h-full max-w-md md:h-auto">
             <div class="relative w-[150%] ml-[-25%] bg-white rounded-lg shadow p-4">
                 <button type="button"
