Change the Favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="tailus ui html-vite and tailwindcss 3.1 boilerplate" />
     <title>Zé Planilha - Planilha Fluxo de Caixa</title>
@@ -122,7 +122,7 @@
                         planilha em anexo no e-mail.</p>
                 </div>
                 <div class="px-6 py-6 lg:px-8">
-                    <form class="space-y-6" action="#" id="formDemo">
+                    <form class="space-y-6" action="" method="post" id="formDemo">
                         <div class="flex gap-1">
                             <div class="flex-1">
                                 <label for="name" class="block mb-2 text-sm font-medium text-gray-800">Nome</label>
