--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <iframe class="w-full h-full" width="" height="" src="https://www.youtube.com/embed/ZEmnEUx18iQ"
                         title="Vídeo Planilha Fluxo de Caixa Pro" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
+                        allowfullscreen loading="lazy"></iframe>
                 </div>
             </div>
         </div>
