Create dynamic url on buy button

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 </li>
                                 <li
                                     class="mt-12 -ml-1 flex w-full flex-col space-y-2 sm:flex-row md:w-max lg:mt-0 lg:mr-6 lg:space-y-0 lg:pl-6">
-                                    <a href="https://seguro.zeplanilha.com/r/ABE0WSGLNP?utm_source=LP"
+                                    <a href="" id="buyBtnHeader"
                                         class="relative ml-auto flex h-9 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-[#4ed199] before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-[#4ed199]/90 lg:before:bg-[#4ed199]">
                                         <span
                                             class="relative flex items-center text-sm font-semibold text-black lg:text-black">
@@ -159,7 +159,7 @@
     </div>
 
     <div class="sm:inline-block xs:inline-block md:hidden lg:hidden xl:hidden p-3 left-0 right-0 leading-tight rounded shadow-md bottom-0 w-full mx-0 fixed z-50" id="buyButton">
-        <a href="https://seguro.zeplanilha.com/r/ABE0WSGLNP?utm_source=LP"
+        <a href="" id="buyBtnMobile"
             class="sm:relative xs:relative md:hidden lg:hidden xl:hidden ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-[#4ed199] before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-[#4ed199]/90 lg:before:bg-[#4ed199] shadow-xl">
             <span class="relative flex items-center text-sm font-semibold text-black lg:text-black">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -231,7 +231,7 @@
                     <div class="flex mt-6 w-full justify-center mb-10">
                         <div
                             class="mt-12 flex w-full flex-1 space-y-2 sm:flex-row md:w-max lg:mt-0 lg:mr-6 lg:space-y-0 lg:pl-6">
-                            <a href="https://seguro.zeplanilha.com/r/ABE0WSGLNP?utm_source=LP"
+                            <a href="" id="buyBtnMain"
                                 class="relative flex lg:h-16 md:h-16 sm:h-12 xs:h-12 lg:w-full md:w-full sm:w-40 xs:w-40 items-center justify-center before:absolute before:inset-0 before:rounded before:bg-[#4ed199] before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-[#4ed199]/90 lg:before:bg-[#4ed199] shadow-xl lg:text-sm md:text-sm sm:text-xs xs:text-xs">
                                 <span class="relative flex items-center font-semibold text-black lg:text-black">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -999,10 +999,9 @@
     <section class="lg:my-32 md:my-28 sm:my-0 xs:my-0">
         <div class="lg:py-28 md:py-28 sm:py-16 xs:py-16 flex flex-col justify-center items-center text-center">
             <p class="lg:text-4xl md:text-3xl sm:text-2xl xs:text-2xl text-gray-800 font-bold font-poppins mb-10">Já
-                estou
-                convencido, quero comprar!</p>
+                estou convencido, quero comprar!</p>
             <div class=" -ml-1 flex flex-1 flex-col space-y-2 sm:flex-row md:w-max lg:mr-6 lg:space-y-0 lg:pl-6">
-                <a href="https://seguro.zeplanilha.com/r/ABE0WSGLNP?utm_source=LP"
+                <a href="" id="buyBtnFinal"
                     class="relative ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-green-300 before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-green-400 lg:before:bg-green-300 font-manrope">
                     <span class="relative flex items-center text-md font-bold text-black px-6">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
