Fixed Buy Button in mobile

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
     </div>
 
-    <div class="sm:inline-block xs:inline-block md:hidden lg:hidden xl:hidden p-3 left-0 right-0 leading-tight rounded shadow-md bottom-0 w-full mx-0 fixed z-50" id="buyButton">
+    <div class="sm:hidden xs:hidden md:hidden lg:hidden xl:hidden p-3 left-0 right-0 leading-tight rounded shadow-md bottom-0 w-full mx-0 fixed z-50" id="buyButton">
         <a href="" id="buyBtnMobile"
             class="sm:relative xs:relative md:hidden lg:hidden xl:hidden ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-[#4ed199] before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-[#4ed199]/90 lg:before:bg-[#4ed199] shadow-xl">
             <span class="relative flex items-center text-sm font-semibold text-black lg:text-black">
