Change width and height of the testimonial image and set to flex in mobile

--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
                 <div class="text-center flex flex-col justify-center items-center">
                     <h2 class="font-semibold text-gray-800 sm:text-xl md:text-2xl xl:text-3xl">Depoimentos de nossos
                         clientes 🤩</h2>
-                    <p class="mx-auto mt-2 text-gray-700 md:w-3/4 lg:w-3/5 text-base">Temos mais de 70 avaliações
-                        resgistradas no Google, todas com nota máxima!!
+                    <p class="mx-auto mt-2 text-gray-700 md:w-3/4 lg:w-3/5 text-base">
+                        Temos mais de 100 avaliações resgistradas no Google, todas com nota máxima!!
                     </p>
                 </div>
                 <div class="flex flex-col items-center justify-center xs:mt-10 md:mt-10 lg:mt-0">
@@ -316,18 +316,17 @@
                         </svg>
                         Ver avaliações no Google
                     </a>
-                    <span class="mt-4 text-gray-500 text-xs text-center">Nossas avaliações são reais, coletadas
-                        diretamente pelo
-                        Google</span>
+                    <span class="mt-4 text-gray-500 text-xs text-center">
+                        Nossas avaliações são reais, coletadas diretamente pelo Google
+                    </span>
                 </div>
             </div>
-            <div class="mt-28 grid gap-8 sm:mx-auto sm:w-2/3 md:w-full sm:grid-cols-3 md:grid-cols-3 lg:grid-cols-3">
-                <div class="rounded border border-gray-100 bg-white lg:px-8 md:px-8 sm:px-4 xs:px-4 lg:py-12 md:py-12 sm:py-6 xs:py-6 shadow-xl hover:scale-105
-                hover:shadow-2xl duration-300">
+            <div class="mt-28 lg:grid md:grid sm:flex xs:flex gap-8 sm:mx-auto md:w-full lg:overflow-visible md:overflow-visible sm:overflow-x-auto scroll-smooth xs:overflow-x-auto md:grid-cols-3 lg:grid-cols-3">
+                <div class="rounded border border-gray-100 bg-white lg:px-8 md:px-8 sm:px-4 xs:px-4 lg:py-12 md:py-12 sm:py-6 xs:py-6 shadow-xl hover:scale-105 hover:shadow-2xl duration-300">
                     <a href="https://goo.gl/maps/zWv1UAM12FcwdFaM9" target="_blank">
                         <div class="space-y-12 text-center">
                             <img src="https://zeplanilha.com/fluxodecaixa/images/fluxodecaixa/Andréia-min.webp"
-                                class="mx-auto lg:h-28 lg:w-28 md:h-20 md:w-20 sm:h-16 sm:w-16 xs:h-16 xs:w-16" width="120" height="120"
+                                class="mx-auto lg:h-28 lg:w-28 md:h-24 md:w-24 sm:h-20 sm:w-20 xs:h-20 xs:w-20" width="120" height="120"
                                 loading="lazy" alt="Foto cliente" />
                             <div class="space-y-6">
                                 <p class="text-gray-600 lg:text-base md:text-base sm:text-sm xs:text-sm">Excelente. Super indico. Atendeu minhas expectativas e
@@ -381,7 +380,7 @@
                     <a href="https://goo.gl/maps/XaU5JVZxtKESZnYd7" target="_blank">
                         <div class="space-y-12 text-center">
                             <img src="https://zeplanilha.com/fluxodecaixa/images/fluxodecaixa/we-min.webp"
-                                class="mx-auto lg:h-28 lg:w-28 md:h-20 md:w-20 sm:h-16 sm:w-16 xs:h-16 xs:w-16" width="120" height="120"
+                                class="mx-auto lg:h-28 lg:w-28 md:h-24 md:w-24 sm:h-20 sm:w-20 xs:h-20 xs:w-20" width="120" height="120"
                                 loading="lazy" alt="Foto cliente" />
                             <div class="space-y-6">
                                 <p class="text-gray-600 lg:text-base md:text-base sm:text-sm xs:text-sm">Atendimento excelente, com rapidez e muito prestativos.
@@ -435,7 +434,7 @@
                     <a href="https://goo.gl/maps/XK4rak4kKGvgHbhR8" target="_blank">
                         <div class="space-y-12 text-center">
                             <img src="https://zeplanilha.com/fluxodecaixa/images/fluxodecaixa/Cristina-min.webp"
-                                class="mx-auto lg:h-28 lg:w-28 md:h-20 md:w-20 sm:h-16 sm:w-16 xs:h-16 xs:w-16" width="120" height="120"
+                                class="mx-auto lg:h-28 lg:w-28 md:h-24 md:w-24 sm:h-20 sm:w-20 xs:h-20 xs:w-20" width="120" height="120"
                                 loading="lazy" alt="Foto cliente" />
                             <div class="space-y-6">
                                 <p class="text-gray-600 lg:text-base md:text-base sm:text-sm xs:text-sm">Amei a planilha! É muito prática, é excelente e super indico!
