Add margin top in buttons

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     </div>
                     <p class="text-gray-600">Não perca mais tempo estudando fórmulas de excel para
                         criar o controle da sua empresa. Temos uma planilha pronta!</p>
-                    <div class="flex mt-6 w-full justify-center mb-10 sm:mt-0 xs:mt-0">
+                    <div class="flex mt-6 w-full justify-center mb-10 lg:mt-5 md:mt-5 sm:mt-0 xs:mt-0">
                         <div
                             class="mt-12 flex w-full flex-1 space-y-2 sm:flex-row md:w-max lg:mt-0 lg:mr-6 lg:space-y-0 lg:pl-6">
                             <a href="" id="buyBtnMain"
