Change the padding of the all page and add text to FAQ

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     </span>
                 </div>
             </div>
-            <div class="lg:mt-20 md:mt-20 sm:mt-10 xs:mt-10 lg:grid md:grid sm:flex xs:flex gap-8 sm:mx-5 xs:mx-5 md:w-full lg:overflow-visible md:overflow-visible sm:overflow-x-auto scroll-smooth xs:overflow-x-auto md:grid-cols-3 lg:grid-cols-3">
+            <div class="lg:mt-20 md:mt-20 sm:mt-10 xs:mt-10 lg:grid md:grid sm:flex xs:flex gap-8 sm:mx-5 xs:mx-5 md:w-full lg:overflow-visible md:overflow-visible sm:overflow-x-auto scroll-smooth xs:overflow-x-auto md:grid-cols-3 lg:grid-cols-3 scrollbar-hide">
                 <div class="rounded border border-gray-100 bg-white px-8 lg:py-12 md:py-12 sm:py-6 xs:py-6 lg:mb-0 md:mb-0 sm:mb-14 xs:mb-14 shadow-xl hover:scale-105 hover:shadow-2xl duration-300">
                     <a href="https://goo.gl/maps/zWv1UAM12FcwdFaM9" target="_blank">
                         <div class="space-y-12 text-center">
@@ -563,7 +563,7 @@
             </div>
     </section>
 
-    <section class="lg:pt-24 md:pt-24 sm:pt-10 xs:pt-10">
+    <section class="lg:pt-24 md:pt-24 sm:pt-16 xs:pt-16">
         <div class="lg:mx-auto md:mx-auto px-4 sm:px-12 xl:max-w-6xl lg:border-white md:border-white sm:border-gray-100 xs:border-gray-100 lg:bg-white md:bg-white sm:bg-gray-100 xs:bg-gray-100 sm:rounded xs:rounded sm:mx-3 xs:mx-3 lg:shadow-none md:shadow-none sm:shadow-xl xs:shadow-xl sm:py-5 xs:py-5 flex justify-center">
             <div class="space-y-6 md:flex lg:items-center lg:gap-6 lg:space-y-0">
                 <div class="md:4/12 lg:w-5/12">
@@ -605,7 +605,7 @@
         </div>
     </section>
 
-    <section class="lg:pt-24 md:pt-24 sm:-pt-2 xs:-pt-2">
+    <section class="lg:pt-20 md:pt-20 sm:-pt-2 xs:-pt-2">
         <div class="lg:mx-auto md:mx-auto sm:mx-1 xs:mx-1 px-4 sm:px-12 xl:max-w-6xl xl:px-0">
             <div class="mt-12 grid gap-8 md:grid-cols-2 font-poppins">
                 <div
@@ -657,9 +657,9 @@
         </div>
     </section>
 
-    <section class="lg:pt-24 md:pt-24 sm:pt-10 xs:pt-10 font-poppins">
+    <section class="lg:pt-32 md:pt-28 sm:pt-16 xs:pt-16 font-poppins">
         <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0">
-            <div class="text-center lg:mb-14 md:mb-10 sm:-mb-2 xs:-mb-2">
+            <div class="text-center lg:mb-16 md:mb-12 sm:-mb-2 xs:-mb-2">
                 <h3 class="text-3xl text-gray-800 md:text-4xl xl:text-5xl">
                     Detalhamento das
                     <span class="font-semibold text-green-600">entradas</span>
@@ -686,7 +686,7 @@
         </div>
     </section>
 
-    <section class="lg:pt-24 md:pt-24 sm:pt-5 xs:pt-5">
+    <section class="lg:pt-28 md:pt-24 sm:pt-8 xs:pt-8">
         <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0">
             <div class="space-y-6 md:flex lg:items-center lg:gap-6 lg:space-y-0">
                 <div class="md:4/12 lg:w-4/12 xs:mb-5">
@@ -706,9 +706,9 @@
         </div>
     </section>
 
-    <section class="lg:pt-24 md:pt-24 sm:pt-10 xs:pt-10 font-poppins">
+    <section class="lg:pt-32 md:pt-28 sm:pt-16 xs:pt-16 font-poppins">
         <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0">
-            <div class="text-center lg:mb-14 md:mb-14 sm:mb-8 xs:mb-8">
+            <div class="text-center lg:mb-16 md:mb-14 sm:mb-8 xs:mb-8">
                 <h3 class="text-3xl text-gray-800 md:text-4xl xl:text-5xl">
                     Compare o
                     <span class="font-semibold text-gray-400">planejado</span>
@@ -724,7 +724,7 @@
         </div>
     </section>
 
-    <section class="lg:pt-24 md:pt-24 sm:pt-10 xs:pt-10">
+    <section class="lg:pt-32 md:pt-28 sm:pt-16 xs:pt-16">
         <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0">
             <div class="space-y-6 md:flex lg:items-center lg:gap-6 lg:space-y-0">
                 <div class="md:4/12 lg:w-4/12">
@@ -744,10 +744,10 @@
         </div>
     </section>
 
-    <section class="lg:pt-24 md:pt-24 sm:pt-12 xs:pt-12 font-poppins">
+    <section class="lg:pt-32 md:pt-28 sm:pt-16 xs:pt-16 font-poppins">
         <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0">
             <div class="text-center">
-                <div class="text-center mb-14">
+                <div class="text-center mb-16">
                     <h3 class="text-3xl text-gray-800 md:text-4xl xl:text-5xl">
                         Cadastros
                         <span class="font-semibold text-gray-400">simples</span>
@@ -899,7 +899,7 @@
         </div>
     </section>
 
-    <section class="lg:pt-24 md:pt-24 sm:pt-5 xs:pt-5">
+    <section class="lg:pt-24 md:pt-24 sm:pt-8 xs:pt-8">
         <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0 font-poppins">
             <h2 class="text-center text-3xl font-medium text-gray-800 md:text-4xl xl:text-5xl">Conheça os <b>autores</b>
                 da planilha</h2>
@@ -1109,8 +1109,9 @@
                         </dt>
                         <dd class="faq-answer block max-h-0 overflow-hidden pr-12 duration-300 ease-in-out" id="faq-3">
                             <p class="pb-6 text-base text-gray-600">Você precisa da versão Office 2010 ou superior. Caso
-                                você não sabia a versão do seu excel, <a
+                                você não sabia a versão do seu excel, <a class="font-semibold underline" target="_blank"
                                     href="https://www.youtube.com/watch?v=ALTwrBakIQI">veja esse vídeo</a>.</p>
+                            <p class="pb-6 text-base text-gray-600">A nossa planilha deve ser utilizada em Excel instalado em computador. Você não deve abrir em modo online, como Google Sheets, Excel Online, OneDrive, etc</p>
                         </dd>
                     </dl>
                 </div>
