Change position of the Linkedin logo in Author section

--- a/index.html
+++ b/index.html
@@ -913,24 +913,27 @@
                                 loading="lazy" width="150" height="150" />
                         </div>
                         <div class="mt-4 max-w-xs">
-                            <h3 class="lg:text-3xl md:text-2xl sm:text:xl font-semibold text-gray-800">Matheus Soares
-                            </h3>
+                            <div class="flex justify-center items-center">
+                                <h3 class="lg:text-3xl md:text-2xl sm:text:xl xs:text-xl font-semibold text-gray-800 mr-4">Matheus Soares
+                                </h3>
+                                <div class="flex justify-center items-center gap-4">
+                                    <a href="https://www.linkedin.com/in/matheus-soares-26707ba5/" target="_blank"
+                                        aria-label="twitter"
+                                        class="text-gray-600 hover:bg-opacity-80 duration-200 p-1 rounded bg-[#1024FB]">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-5 h-5"
+                                            style="color: #fff;"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                                            <path fill="currentColor"
+                                                d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
                             <span
-                                class="mt-2 mb-4 block text-gray-700 font-semibold lg:text-xl md:text-lg sm:text:base">CEO
+                                class="mt-2 mb-4 block text-gray-700 font-semibold lg:text-xl md:text-lg sm:text:base xs:text-base">CEO
                                 Zeplanilha</span>
                             <span class="text-gray-500">Engenheiro formado pela Federal de Itajubá e diretor de
-                                analytics & marketing de startup.</span>
-                            <div class="mt-4 flex justify-center gap-4">
-                                <a href="https://www.linkedin.com/in/matheus-soares-26707ba5/" target="_blank"
-                                    aria-label="twitter"
-                                    class="text-gray-600 hover:bg-opacity-80 duration-200 p-1 rounded bg-[#1024FB]">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-5 h-5"
-                                        style="color: #fff;"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-                                        <path fill="currentColor"
-                                            d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z" />
-                                    </svg>
-                                </a>
-                            </div>
+                                analytics & marketing de startup.
+                            </span>                        
                         </div>
                     </div>
                     <div class="flex flex-col justify-center items-center text-center xs:mb-20 sm:mb-20">
@@ -941,24 +944,27 @@
                                 loading="lazy" width="150" height="150" />
                         </div>
                         <div class="mt-4 max-w-xs mx-6">
-                            <h3 class="lg:text-3xl md:text-2xl sm:text:xl font-semibold text-gray-800">Simone Pegoraro
-                            </h3>
+                            <div class="flex justify-center items-center">
+                                <h3 class="lg:text-3xl md:text-2xl sm:text:xl xs:text-xl font-semibold text-gray-800 mr-4">Simone Pegoraro
+                                </h3>
+                                <div class="flex justify-center gap-4">
+                                    <a href="https://www.linkedin.com/in/simonepegoraro/" target="_blank"
+                                        aria-label="twitter"
+                                        class="text-gray-600 hover:bg-opacity-80 duration-200 p-1 rounded bg-[#1024FB]">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-5 h-5"
+                                            style="color: #fff;"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                                            <path fill="currentColor"
+                                                d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
                             <span
-                                class="mt-2 mb-4 block text-gray-700 font-semibold lg:text-xl md:text-lg sm:text:base">Gerente
+                                class="mt-2 mb-4 block text-gray-700 font-semibold lg:text-xl md:text-lg sm:text:base xs:text-base">Gerente
                                 de Controladoria e Finanças</span>
                             <span class="text-gray-500">Profissional com experiências na área financeira em
-                                multinacionais com MBA em negócios financeiros.</span>
-                            <div class="mt-4 flex justify-center gap-4">
-                                <a href="https://www.linkedin.com/in/simonepegoraro/" target="_blank"
-                                    aria-label="twitter"
-                                    class="text-gray-600 hover:bg-opacity-80 duration-200 p-1 rounded bg-[#1024FB]">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-5 h-5"
-                                        style="color: #fff;"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-                                        <path fill="currentColor"
-                                            d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z" />
-                                    </svg>
-                                </a>
-                            </div>
+                                multinacionais com MBA em negócios financeiros.
+                            </span>                            
                         </div>
                     </div>
                     <div class="flex flex-col justify-center items-center text-center xs:mb-20 sm:mb-20">
@@ -969,24 +975,27 @@
                                 loading="lazy" width="150" height="150" />
                         </div>
                         <div class="mt-4 max-w-xs">
-                            <h3 class="lg:text-3xl md:text-2xl sm:text:xl font-semibold text-gray-800">Rodolfo Farias
-                            </h3>
+                            <div class="flex justify-center items-center">
+                                <h3 class="lg:text-3xl md:text-2xl sm:text:xl xs:text-xl font-semibold text-gray-800 mr-4">Rodolfo Farias
+                                </h3>
+                                <div class="flex justify-center gap-4">
+                                    <a href="https://www.linkedin.com/in/jrodolfofneto/" target="_blank"
+                                        aria-label="twitter"
+                                        class="text-gray-600 hover:bg-opacity-80 duration-200 p-1 rounded bg-[#1024FB]">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-5 h-5"
+                                            style="color: #fff;"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                                            <path fill="currentColor"
+                                                d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
                             <span
-                                class="mt-2 mb-4 block text-gray-700 font-semibold lg:text-xl md:text-lg sm:text:base">Consultoria
+                                class="mt-2 mb-4 block text-gray-700 font-semibold lg:text-xl md:text-lg sm:text:base xs:text-base">Consultoria
                                 Estratégica</span>
                             <span class="text-gray-500">Engenheiro Mecânico-Aeronáutico formado pelo ITA e Associate do
-                                Boston Consulting Group.</span>
-                            <div class="mt-4 flex justify-center gap-4">
-                                <a href="https://www.linkedin.com/in/jrodolfofneto/" target="_blank"
-                                    aria-label="twitter"
-                                    class="text-gray-600 hover:bg-opacity-80 duration-200 p-1 rounded bg-[#1024FB]">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-5 h-5"
-                                        style="color: #fff;"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-                                        <path fill="currentColor"
-                                            d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z" />
-                                    </svg>
-                                </a>
-                            </div>
+                                Boston Consulting Group.
+                            </span>                            
                         </div>
                     </div>
                 </div>
