Create function to hidde the text of the modal

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                     <span class="px-3 py-2 bg-orange-300 rounded-3xl shadow-md text-sm font-medium">Envio
                         imediato!</span>
                     <h2 class="text-4xl font-semibold my-4 text-gray-800 text-center">Planilha de Demonstração</h2>
-                    <p class="text-center text-gray-600 my-4">A planilha de demonstração serve para você avaliar se o
+                    <p class="modal-text text-center text-gray-600 my-4">A planilha de demonstração serve para você avaliar se o
                         produto te atende.</p>
-                    <p class="text-center text-red-500 font-bold">É necessário um e-mail válido, pois enviaremos a
+                    <p class="modal-text text-center text-red-500 font-bold">É necessário um e-mail válido, pois enviaremos a
                         planilha em anexo no e-mail.</p>
                 </div>
                 <div class="text-center text-green-700 text-xl font-medium mt-2" id="successAlert"></div>
