Change text of the price card

--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@
                                 </li>
                                 <li class="space-x-2">
                                     <span class="font-semibold text-gray-500">&check;</span>
-                                    <span>Fluxo de Caixa Mensal e Diário (a básica também tem esse recurso)</span>
+                                    <span>Fluxo de Caixa Mensal e Diário</span>
                                 </li>
                                 <li class="space-x-2">
                                     <span class="font-semibold text-gray-500">&check;</span>
